# sloc-guard

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  .sloc-guard.toml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  agent.md  clippy.toml  requirements.md  tarpaulin.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.cursor/rules/: other.mdc  rules.mdc
.github/action/: README.md  action.yml  problem-matcher.json
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ENGINEERING_GUIDELINES.md  Implementation Plan.md  PROJECT_OVERVIEW.md  RECIPES.md  Requirements.md  SCOPE_BOUNDARIES.md  sloc-guard.example.toml  sloc-guard.example2.toml  sloc-guard.example_old.toml
scripts/: install-sloc-guard.sh
src/: cli.rs  cli_tests.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  main.rs  main_baseline_tests.rs  main_cli_tests.rs  main_integration_tests.rs  main_tests.rs  path_matching.rs  path_utils.rs  state.rs  state_tests.rs
src/analyzer/: c_parser_tests.rs  go_parser_tests.rs  js_parser_tests.rs  mod.rs  mod_tests.rs  parser.rs  parser_tests.rs  python_parser_tests.rs  rust_parser_tests.rs  split.rs  types.rs
src/baseline/: baseline_tests.rs  mod.rs  types.rs
src/cache/: mod.rs  types.rs  types_tests.rs
src/checker/: explain.rs  mod.rs  mod_tests.rs  result.rs  structure.rs  structure_tests.rs  structure_types.rs  threshold.rs  threshold_tests.rs
src/commands/: baseline_cmd.rs  baseline_tests.rs  check.rs  check_advanced_tests.rs  check_baseline_ops.rs  check_baseline_tests.rs  check_context_structure_tests.rs  check_conversion_tests.rs  check_git_diff.rs  check_git_diff_tests.rs  check_output.rs  check_output_tests.rs  check_processing.rs  check_processing_tests.rs  check_run_tests.rs  check_tests.rs  check_validation.rs  check_validation_tests.rs  common.rs  config.rs  config_tests.rs  context.rs  context_tests.rs  detect.rs  detect_tests.rs  explain.rs  explain_tests.rs  init.rs  init_tests.rs  mod.rs  snapshot.rs  snapshot_tests.rs  stats.rs  stats_tests.rs
src/config/: expires.rs  expires_tests.rs  extends.rs  filesystem.rs  loader.rs  loader_tests.rs  merge.rs  mod.rs  model.rs  model_tests.rs  presets.rs  presets_tests.rs  remote.rs  remote_tests.rs  validation.rs
src/counter/: comment.rs  comment_tests.rs  mod.rs  sloc.rs  sloc_tests.rs  test_fixtures.rs
src/error_tests/: config_source_tests.rs  extends_tests.rs  git_tests.rs  io_tests.rs  mod.rs  pattern_tests.rs  (+3 more)
tests/: action_contract_tests.rs  baseline_integration_tests.rs  check_integration_tests.rs  cli_integration_tests.rs  config_integration_tests.rs  explain_integration_tests.rs  init_integration_tests.rs  stats_integration_tests.rs
(+254 files in other folders)
