[package]
name = "sloc-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

# File system
walkdir = "2"
globset = "0.4"

# Parallel processing
rayon = "1.10"

gix = { version = "0.75", default-features = false, features = ["dirwalk"] }

# Terminal output
colored = "3"

# Error handling
thiserror = "2"

[dev-dependencies]
# Testing utilities
tempfile = "3"
assert_cmd = "2"
predicates = "3"


[lints.clippy]
# 基础配置
all = "deny" # 拒绝默认规则（把默认警告变成错误）
# 开启严格模式
pedantic = { level = "warn", priority = -1 } # 对 pedantic 规则发出警告
nursery = { level = "warn", priority = -1 }  # 对 nursery 规则发出警告
# 开启认知复杂度检查，并设为 Deny (报错) 或 Warn (警告)
cognitive_complexity = "deny"
too_many_lines = "deny"
